# cpp11training

./: .gitmodules  .travis.yml  Makefile  README.md  about.md  cpp11training.sln
.github/workflows/: codeql-analysis.yml
coreextensions/: auto.cpp
coupling/: CMakeLists.txt
coupling/coupled_program/: deps.cpp
coupling/coupled_program/graphs/: graph.cpp  graph.hpp
cpp11training/: .gitignore  3.class_design.cpp  CMakeLists.txt  cpp11training.sln  cpp11training.vcxproj.filters
cpp11training/CMake/: SetupGoogletest.cmake
cpp11training/cpp11training/: 1.rangebased_for.cpp  2.uniform_initialization.cpp  3.class_design.cpp  6.types_and_metaprogramming.cpp  7.variadic_templates.cpp  HeavyObject.cpp  HeavyObject.h  ReadMe.txt  class_design.cpp  cpp11training.cpp  cpp11training.vcxproj  cpp11training.vcxproj.filters  enums.cpp  exceptions.cpp  lambdas.cpp  name_lookup.cpp  packages.config  perftest.h  rangebased_for.cpp  set_algorithms.cpp  stdafx.h  thisproject.props  types_and_metaprogramming.cpp  uniform_initialization.cpp  use_auto.cpp  variadic_templates.cpp
cpp11training/cpp11training/algorithms/: 1.transform.cpp  2.set_algorithms.cpp  adjacent_find.cpp  transform.cpp
cpp11training/cpp11training/async/: async_1.cpp  the_web.hpp
cpp11training/cpp11training/basic/: generic_program.cpp  storage_types.cpp
cpp11training/cpp11training/class_design/: Instrument.h  MyBike.h  Piano.h  Thing.h  Vehicle.h
cpp11training/cpp11training/move/: 3.moveable_objects.cpp  moveable_objects.cpp
cpp11training/cpp11training/resource_management/: 1.unique_ptr.cpp  shared_ptr.cpp  unique_ptr.cpp
cpp11training/cpp11training/streams/: formatted_io.cpp
cpp11training/cpp11training/sum_types/: 1.optional.cpp
cpp11training/dependencies/: import_googletest.props
docker/: Dockerfile  _typical_workflow.sh  build-container.bat  build-container.sh  run_container.bat  test_buildimage.sh
intro_to_boost/: .travis.yml  CMakeLists.txt  appveyor.yml  conanfile.py  journey.cpp
slides/: 1.coreextensions-c11-121213071023-phpapp02-reordered.pptx  2.lambdas-c11-121213071023-phpapp02-reordered.pptx  4.a.Bert-Rodiers-Move-Semantics-Part-1.pptx  6.c11multithreading-futures-140925092912-phpapp01.pptx  Makefile  README.md  md_overview.sh  to_reveal.py
slides/cpp20/: cpp20.md
slides/function_signature_design/: function_signature_design.md
slides/function_signature_design/css/theme/source/: sioux.scss
src/: 1.rangebased_for.cpp  2.uniform_initialization.cpp  4.use_auto.cpp  5.enums.cpp  7.variadic_templates.cpp  AddGoogleTest.cmake  CMakeLists.txt  FetchGoogleTest.cmake  cpp11training.cpp  exceptions.cpp  lambdas.cpp  packages.config  stdafx.cpp
src/algorithms/: 2.set_algorithms.cpp  4.numeric.cpp  compound_exercise.cpp
src/async/: ingredients.hpp
src/basic/: generic_program.cpp  raii.cpp  storage_types.cpp
src/class_design/: Instrument.h  MyBike.h  Thing.h  Vehicle.h
src/containers/: sequential.cpp
src/resource_management/: 2.shared_ptr.cpp
src/sum_types/: 1.optional.cpp
